# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

* Changes.txt updated until here **********************************************

2018-03-14 Giuseppe Aruta
      * Raster>Profile. Added export profile to .dxf on Additional Frame 
        output options

2018-03-14 Giuseppe Aruta
     * Smal enhancement on AdditionalResul Frame, JSplitPanel divider and
       added dxf export for plot (only on jFileChooser, not yer working)
     * Moved Statistics>Plot>(All) and Statistic>Classify attributes output
       plot into AdditionalResul Frame 

2018-03-12 Giuseppe Aruta
    * Activated  Additional Result framemork: outputs other than vector or 
      raster are loaded as objects into a convenient frame where user can  
      save/delete/rename these objects.
      The following objects can be saved into the Additional Result frame:
      - Texts in Jlabel, JtextPane, JtextArea, HTMLPane: saved as .html file
      - JTabel objects: saved as .csv file
      - graphics added to PlotPane: saved as .png file
      -  Other object: saved to .png file
      - FeatureCollection into a FeatureCollectionPanel: saved to .jml/.shp
      Additional Results framework has been adapted from Sextante.
     * Added option to ProfileGraphPlugIn to use selected line as profile trace
       Graphics and table Outputs are saved  into Additional Result frame

2018-01-30 Giuseppe Aruta
   * Upgraded Sextante building to version gen2018a to solve a bug on 
     exporting raster data. Moved Toolboxframe as OJ internal frame

2018-01-28 mmichaud <m.michael.michaud@orange.fr>
  * Update Cadplan VertexSymbol (finnish translation + java 1.7 compatibility)
  * Update Cadplan JumpPrinter (finnish translation + OpenJUMP 1.11 compatibility)

2018-01-28 Giuseppe Aruta